some text display stuff overflow the item pages Fix for undefineds on reloading while on deal page

--- a/src/mint/react/components/App/Footer.scss
+++ b/src/mint/react/components/App/Footer.scss
@@ -36,6 +36,7 @@
         border: 1px solid $border-color-light;
         color: $kip-faded-color;
         text-align: center;
+        font-size: 12px;
       }
       &:only-child {
         margin: 0 30px;
